--- a/wiki/Tutoriel.wiki
+++ b/wiki/Tutoriel.wiki
@@ -22,4 +22,6 @@ Une fois que la configuration de la base de donnée à bien été faite, vous po
 = Etape 2=
 
 Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit de lancer l'application à l'aide du bouton de compliation et vous serez rediriger vers la page, d'accueil de l'application.
-http://code.google.com/chart?chs=200x125&chd=t:48.14,33.79,19.77|83.18,18.73,12.04&cht=bvg&nonsense=1.png
+http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/1.png
+
+<img src="http://yourgoogleproject.googlecode.com/files/name of your image.PNG" alt="Logo"/>
