--- a/wiki/Tutoriel.wiki
+++ b/wiki/Tutoriel.wiki
@@ -26,3 +26,27 @@ Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit d
    *Page d'accueil
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/1.png
+
+  *Connexion:
+Si vous avez déjà créé votre compte vous pouvez logger et accédé à votre session.
+
+   * Créer un compte:
+Vous devez renseigner des donnée valides. Une fois terminer un mail vous sera envoyé pour confirmé votre inscription.
+ 
+===Formulaire===
+
+http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/2.png
+
+
+== Session client===
+Une fois connecté vous aurez accès à toutes vos donnée client.
+
+http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/3.png
+
+http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/4.png
+
+
+=suite=
+Vous pouvez découvrir par vous même des fonctionnalités qui n'ont pas été abordé dans ce *bold* Tutoriel. 
+
+======= La TeamMetiss Vous souhaite  BON NAVIGATION SUR SopraCov========
