--- a/wiki/Tutoriel.wiki
+++ b/wiki/Tutoriel.wiki
@@ -27,10 +27,10 @@ Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit d
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/1.png
 
-  #Connexion:
+  *  Connexion:
 Si vous avez déjà créé votre compte vous pouvez logger et accédé à votre session.
 
-   * Créer un compte:
+   *  Créer un compte:
 Vous devez renseigner des donnée valides. Une fois terminer un mail vous sera envoyé pour confirmé votre inscription.
  
 ===Formulaire===
@@ -46,7 +46,7 @@ http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/3.png
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/4.png
 
 
-=suite=
+====suite====
 Vous pouvez découvrir par vous même des fonctionnalités qui n'ont pas été abordé dans ce *bold* Tutoriel. 
 
-======= La TeamMetiss Vous souhaite  BON NAVIGATION SUR SopraCov========
+======= La TeamMetiss Vous souhaite  BON NAVIGATION SUR SopraCov ========
