--- a/wiki/Tutoriel.wiki
+++ b/wiki/Tutoriel.wiki
@@ -27,7 +27,7 @@ Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit d
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/1.png
 
-  *  Connexion:
+  *  *Connexion*:
 Si vous avez déjà créé votre compte vous pouvez logger et accédé à votre session.
 
    *  * Créer un compte*:
@@ -40,16 +40,16 @@ http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/2.png
 
 == Session client===
 Une fois connecté vous aurez accès à toutes vos donnée client.
-*  *bold* Recherche: Vous affiche toutes les disponibilités correspondant à votre trajet.
+*  * Recherche*: Vous affiche toutes les disponibilités correspondant à votre trajet.
 
-*  *bold* Recherche Avancé: vous permet de réduire votre recherche à un conducteur de votre choix.
+*  * Recherche Avancé*: vous permet de réduire votre recherche à un conducteur de votre choix.
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/3.png
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/4.png
 
 
-====suite====
+=suite=
 Vous pouvez découvrir par vous même des fonctionnalités qui n'ont pas été abordé dans ce *bold* Tutoriel. 
 
 ======= La TeamMetiss Vous souhaite une  BONNE NAVIGATION SUR SopraCov ========
