Edited wiki page Tutoriel through web user interface.

--- a/wiki/Tutoriel.wiki
+++ b/wiki/Tutoriel.wiki
@@ -8,7 +8,7 @@ Pour pouvoir bien utiliser notre application, il y a des étapes importantes qu'
 = Etape 1 = 
 == Configuration de la base de donnée ==
 
-Cette étape permettra de bien configurer la base de donnée. Notre application utilise 2 tables majeurs pour les différentes manipulations. Ces tables sont USERBD et Routes, leur description se trouve [https://docs.google.com/document/d/1BXa7TH9INh_CkOfj3eV0kYoMxeeWP2dspeH8kBXxDtA/edit?usp=sharing ici] .
+Cette étape permettra de bien configurer la base de donnée. Notre application utilise 2 tables majeurs pour les différentes manipulations. Ces tables sont USERBD et ROUTES, leur description se trouve [https://docs.google.com/document/d/1BXa7TH9INh_CkOfj3eV0kYoMxeeWP2dspeH8kBXxDtA/edit?usp=sharing ici] .
 Dans notre implementation nous avons travaillé avec JavaDB( Derby) sur Netbeans. Il est nécessaire de transmettre un lien pour la connection à la basse de donnée. Vous devez modifier la ligne 23 du fichier * "DB.java"* se trouvant dans le Model.
 {{{
 23      private final String url = "jdbc:derby://localhost:1527/SOPRADB;user=sorpa;password=sopra";
@@ -16,22 +16,22 @@ Dans notre implementation nous avons travaillé avec JavaDB( Derby) sur Netbeans
 
        *  *SOPRADB* est le Nom de la table.
 
-Une fois que la configuration de la base de donnée à bien été faite, vous pouvez passer à l'étape 2.
+Une fois que la configuration de la base de donnée a bien été faite, vous pouvez passer à l'étape 2.
 
 
 = Etape 2=
 
-Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit de lancer l'application à l'aide du bouton de compliation et vous serez rediriger vers la page, d'accueil de l'application.
+Dans cette étape vous pouvez commencer à jouer avec l'application. Il suffit de lancer l'application à l'aide du bouton de compilation/execution ou le faire en ligne de commande et vous serez redirigé vers la page d'accueil de l'application.
   
    ==Page d'accueil==
 
 http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/1.png
 
   *  *Connexion*:
-Si vous avez déjà créé votre compte vous pouvez logger et accédé à votre session.
+Si vous avez déjà créé votre compte vous pouvez vous logger et accéder à votre session.
 
    *  *Créer un compte*:
-Vous devez renseigner des donnée valides. Une fois terminer un mail vous sera envoyé pour confirmé votre inscription.
+Vous devez renseigner des donnée valides. Une fois cela fait, un mail vous sera envoyé pour confirmer votre inscription.
  
 ===Formulaire===
 
@@ -39,7 +39,7 @@ http://sopra-teametiss-covoit-2014-2015.googlecode.com/svn/2.png
 
 
 == Session client===
-Une fois connecté vous aurez accès à toutes vos données client.
+Une fois connecté, vous aurez accès à toutes vos données client.
    *  *Recherche*: Vous affiche toutes les disponibilités correspondant à votre trajet.
 
    *  *Recherche Avancé*: vous permet de réduire votre recherche à un conducteur de votre choix.
